--- a/src/styles/root.scss
+++ b/src/styles/root.scss
@@ -28,6 +28,7 @@ button {
       border-bottom: none;
     }
     .square {
+color: #CCFF00;
       width: 80px;
       height: 80px;
       border-right: 2px solid #000;
@@ -42,14 +43,23 @@ button {
 }
 
 
-$black:#50BFE6
+$blue:#4c43d4
 ;
 
-body,.history {
+body {
   font-family: 'Roboto', sans-serif;
-  background-color: $black;
-  color: black;
+  background-color: $blue;
+  color: #12e177;
 }
+.history {
+justify-content: center;
+  font-family: 'Roboto', sans-serif;
+  color: white}
+li{
+list-style-type: none;
+}
+ul{
+padding: 0px;}
 .btn-start{
 border: 1px solid #FFFF66;
  background-color: #CCFF00;
@@ -65,4 +75,8 @@ padding: 12px;
 }
 }
 
-
+.active{
+justify-content: center;
+  font-family: 'Roboto', sans-serif;
+  color: #12e177;
+}
